<resources>
    <string name="sign_in" translatable="false">Sign in</string>
    <string name="last_name_hint" translatable="false">Last name</string>
    <string name="first_name_hint" translatable="false">First name</string>
    <string name="email_hint" translatable="false">Email</string>
    <string name="have_account_text" translatable="false">Already have an account?</string>
    <string name="log_in" translatable="false">Log in</string>
    <string name="sign_in_with_google" translatable="false">Sign in with Google</string>
    <string name="sign_in_with_apple" translatable="false">Sign in with Apple</string>
    <string name="google_logo" translatable="false">Google logo</string>
    <string name="apple_logo" translatable="false">Apple logo</string>

    <string name="email_is_not_proper">%1$s - wrong, %1$s@mail.ru - right</string>
    <string name="account_already_exists">Account already exists.</string>

    <string name="shared_prefs_user_name_key" translatable="false">Shared prefs user key</string>
    <string name="field_is_empty">%1$sField show be filled</string>
    <string name="password_hint">Password</string>
    <string name="repeat_password_hint">Repeat password</string>
</resources>