<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.SignInPageFragment">

    <TextView
        android:id="@+id/SignInTextView"
        android:layout_width="@dimen/fragment_width_sign_in_text"
        android:layout_height="@dimen/fragment_height_sign_in_text"
        android:layout_marginTop="@dimen/fragment_margin_top_sign_in_text"
        android:gravity="center_horizontal|top"
        style="@style/TextAppearance.OnlineShop.SignInLogo"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.OnlineShop.SignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="@dimen/fragment_width_first_name_text"
        android:layout_height="@dimen/fragment_height_first_name_text"
        android:ellipsize="start"
        android:singleLine="true"
        android:gravity="center"
        android:maxLength="30"
        android:maxLines="1"
        style="@style/TextAppearance.OnlineShop.Hint"
        android:hint="@string/first_name_hint"
        android:inputType="textPersonName"
        android:imeOptions="actionNext"
        android:background="@drawable/rectangle_2"
        android:importantForAutofill="no"
        android:layout_marginTop="@dimen/fragment_margin_top_first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SignInTextView"/>

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="@dimen/fragment_width_last_name_edit_text"
        android:layout_height="@dimen/fragment_height_last_name_edit_text"
        android:layout_marginTop="@dimen/fragment_margin_top_last_name_edit_text"
        android:gravity="center"
        android:hint="@string/last_name_hint"
        style="@style/TextAppearance.OnlineShop.Hint"
        android:ellipsize="start"
        android:singleLine="true"
        android:maxLength="30"
        android:maxLines="1"
        android:imeOptions="actionNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameEditText"
        android:inputType="textPersonName"
        android:background="@drawable/rectangle_2"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="@dimen/fragment_width_email_edit_text"
        android:layout_height="@dimen/fragment_height_email_edit_text"
        android:gravity="center"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:ellipsize="start"
        android:singleLine="true"
        android:maxLength="30"
        android:maxLines="1"
        android:background="@drawable/rectangle_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastNameEditText"
        android:layout_marginTop="@dimen/fragment_margin_top_email_edit_text"
        style="@style/TextAppearance.OnlineShop.Hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no" />

    <LinearLayout
        android:id="@+id/signInViewContainer"
        android:layout_width="@dimen/fragment_width_sign_in_container"
        android:layout_height="@dimen/fragment_height_sign_in_container"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/fragment_margin_top_sign_in_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button"
        app:layout_constraintTop_toBottomOf="@id/emailEditText">

        <TextView
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sign_in"
            style="@style/TextAppearance.OnlineShop.SignIn"/>
    </LinearLayout>

    <TextView
        android:id="@+id/haveAccountTextView"
        android:layout_width="@dimen/fragment_width_have_acc_text"
        android:layout_height="@dimen/fragment_height_have_acc_text"
        android:layout_marginTop="@dimen/fragment_margin_top_have_acc_text"
        android:text="@string/have_account_text"
        style="@style/TextAppearance.OnlineShop.HaveAccount"
        app:layout_constraintStart_toStartOf="@+id/signInViewContainer"
        app:layout_constraintTop_toBottomOf="@id/signInViewContainer" />

    <TextView
        android:id="@+id/loginButton"
        android:layout_width="@dimen/fragment_width_login_button"
        android:layout_height="@dimen/fragment_height_login_button"
        android:text="@string/log_in"
        style="@style/TextAppearance.OnlineShop.LogIn"
        app:layout_constraintBottom_toBottomOf="@+id/haveAccountTextView"
        app:layout_constraintStart_toEndOf="@id/haveAccountTextView"
        app:layout_constraintTop_toTopOf="@+id/haveAccountTextView" />

    <ImageView
        android:id="@+id/googleImageView"
        android:layout_width="@dimen/fragment_width_google_icon"
        android:layout_height="@dimen/fragment_height_google_icon"
        android:layout_marginStart="@dimen/fragment_margin_start_google_icon"
        android:layout_marginTop="@dimen/fragment_margin_top_google_icon"
        android:src="@drawable/ic_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/haveAccountTextView"
        android:contentDescription="@string/google_logo" />

    <TextView
        android:id="@+id/signInWithGoogleTextView"
        android:layout_width="@dimen/fragment_width_google_text"
        android:layout_height="@dimen/fragment_height_google_text"
        style="@style/TextAppearance.OnlineShop.SignInWith"
        android:text="@string/sign_in_with_google"
        android:layout_marginStart="11dp"
        app:layout_constraintBottom_toBottomOf="@+id/googleImageView"
        app:layout_constraintStart_toEndOf="@id/googleImageView"
        app:layout_constraintTop_toTopOf="@+id/googleImageView" />

    <ImageView
        android:id="@+id/appleImageView"
        android:layout_width="@dimen/fragment_width_apple_icon"
        android:layout_height="@dimen/fragment_height_apple_icon"
        android:layout_marginStart="@dimen/fragment_margin_start_apple_icon"
        android:layout_marginTop="@dimen/fragment_margin_top_apple_icon"
        android:src="@drawable/ic_apple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/googleImageView"
        android:contentDescription="@string/apple_logo" />

    <TextView
        android:id="@+id/signInWithAppleTextView"
        style="@style/TextAppearance.OnlineShop.SignInWith"
        android:layout_width="@dimen/fragment_width_apple_text"
        android:layout_height="@dimen/fragment_height_apple_text"
        android:text="@string/sign_in_with_apple"
        android:layout_marginStart="@dimen/fragment_margin_start_apple_text"
        app:layout_constraintBottom_toBottomOf="@+id/appleImageView"
        app:layout_constraintStart_toEndOf="@id/appleImageView"
        app:layout_constraintTop_toTopOf="@+id/appleImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>